assets/css/styles-index.css
body {
  background-color: white;
  overflow-x: hidden;
}

#centered-text-white {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: white;
  font-size: 40px;
  text-align: center;
  z-index: 2;
}

@media (max-width: 480px) {
  #centered-text-white {
      font-size: 32px;
      text-align: left;
      width: 90%;
  }
}

#centered-text {
  position: relative;
  left: 50%;
  transform: translate(-50%, 25%);
  color: var(--main-color);
  font-size: 40px;
  text-align: center;
  z-index: 2;
  max-width: 50%;
  margin: 16px;
  padding: 8px;
}

@media (max-width: 480px) {
  #centered-text-blue {
      font-size: 32px;
      text-align: left;
      max-width: 100%;
      margin: 8px;
  }
}

#particles-js {
  position: relative;
  width: 100vw;
  height: 50vh;
  background-color: var(--main-color);
  background-repeat: no-repeat;
  z-index: 1;
}

.content {
  width: 100vw;
  position: relative;
  left: 50%;
  right: 50%;
  margin-left: -50vw;
  margin-right: -50vw;
  margin-top: 0px;
  display: flex;
  flex-direction: column;
}

#quarto-document-content {
  padding-top: 0px;
}

.card-container {
  display: flex;
  flex-direction: column;
  align-items: center; 
  position: relative;
  justify-content: center;
  gap: 16px;
  margin: 8px;
  padding: 8px;
}

p {
  padding: 0px;
  margin: 0px;
}

@media screen and (min-width: 768px) {
  .card-container {
    flex-direction: row;
    justify-content: center;
    gap: 80px;
  }
}

.card {
  border: 0px solid #ddd;
  display: grid;
  padding: 20px;
  border-radius: 8px;
  text-align: left;
  cursor: pointer;
  width: 100%;
  max-width: 250px;
  transition: box-shadow 0.4s;
}

.card:hover {
  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
}

.card .card-cta {
  margin-top: 16px;
  font-weight: bold;
  text-decoration: none;
  display: block; 
  text-align: right;
  color: var(--font-black);
}

.card:hover .card-cta,
.card:active .card-cta {
  text-decoration: underline;
}

img {
  border-radius: 50%;
  padding: 24px;
}

